Finshed framework for HTML resume page

--- a/index.html
+++ b/index.html
@@ -1,1 +1,162 @@
-<p>Stephanie Paulson</P>
+<!DOCTYPE html>
+<html>
+   <head>
+      <title>Stephanie Paulson Resume</title>
+   </head>
+
+   <body>
+    <header>
+      <h1>Stephanie Paulson</h1>
+    </header>
+    <main>
+
+      <section>
+        <header>
+            <h2>About Me</h2>
+        </header>
+        <article>
+          <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ab dignissimos laudantium nisi, distinctio eveniet doloremque minima repellat eum cupiditate fugiat eos quidem accusamus quibusdam! Placeat ullam ipsa omnis illo saepe?</p>
+        </article>
+      </section>
+
+      <section>
+        <header>
+            <h3>Work Experience</h3>
+        </header>
+
+        <article>
+          <header>
+            <p><span><strong>
+              Job Title - Location
+            </strong></span><br>
+              Date of Attendance</p>
+          </header>
+          <ul>
+            <li>1st Example</li>
+            <li>2nd Example</li>
+            <li>3rd Example</li>
+          </ul>
+        </article>
+        <article>
+          <header>
+            <p><span><strong>
+              Job Title - Location
+            </strong></span><br>
+              Date of Attendance</p>
+          </header>
+          <ul>
+            <li>1st Example</li>
+            <li>2nd Example</li>
+            <li>3rd Example</li>
+          </ul>
+        </article>
+        <article>
+          <header>
+            <p><span><strong>
+              Job Title - Location
+            </strong></span><br>
+              Date of Attendance</p>
+          </header>
+          <ul>
+            <li>1st Example</li>
+            <li>2nd Example</li>
+            <li>3rd Example</li>
+          </ul>
+        </article>
+        <article>
+          <header>
+            <p><span><strong>
+              Job Title - Location
+            </strong></span><br>
+              Date of Attendance</p>
+          </header>
+          <ul>
+            <li>1st Example</li>
+            <li>2nd Example</li>
+            <li>3rd Example</li>
+          </ul>
+        </article>
+        <article>
+          <header>
+            <p><span><strong>
+                Job Title - Location
+            </strong></span><br>
+              Date of Attendance</p>
+          </header>
+          <ul>
+            <li>1st Example</li>
+            <li>2nd Example</li>
+            <li>3rd Example</li>
+          </ul>
+        </article>
+        <article>
+          <header>
+            <p><span><strong>
+                Job Title - Location
+            </strong></span><br>
+              Date of Attendance</p>
+          </header>
+          <ul>
+            <li>1st Example</li>
+            <li>2nd Example</li>
+            <li>3rd Example</li>
+          </ul>
+        </article>
+      </section>
+
+      <section>
+        <header>
+          <h3>Education</h3>
+        </header>
+        <article>
+          <header>
+            <p><span><strong>
+              Name - Location
+            </strong></span><br>
+              Major - Date of Attendance</p>
+          </header>
+          <ul>
+            <li>1st Example</li>
+            <li>2nd Example</li>
+            <li>3rd Example</li>
+          </ul>
+        </article>
+        <article>
+          <header>
+            <p><span><strong>
+              Name - Location
+            </strong></span><br>
+              Major - Date of Attendance</p>
+          </header>
+          <ul>
+            <li>1st Example</li>
+            <li>2nd Example</li>
+            <li>3rd Example</li>
+          </ul>
+        </article>
+      </section>
+
+      <section>
+        <header>
+          <h4>Contact</h4>
+        </header>
+        <p>2630 Knollwood Ln. Florissant MO 63031<br>
+        stephanie@dreamhighervisions.com<br>
+        314-246-0602</p>
+      </section>
+
+      <section>
+        <header>
+          <h4>Skills</h4>
+        </header>
+          <ul>
+            <li>1st Example</li>
+            <li>2nd Example</li>
+            <li>3rd Example</li>
+          </ul>
+      </section>
+
+    </main>
+    <footer><p>&copy Dream Higher Visions LLC</p></footer>
+  </body>
+</html>
