added some killer css styling

--- a/index.html
+++ b/index.html
@@ -2,161 +2,164 @@
 <html>
    <head>
       <title>Stephanie Paulson Resume</title>
+      <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+      <meta charset="utf-8">
+      <link rel="stylesheet" type="text/css" href="normalize.css">
+      <link rel="stylesheet" type="text/css" href="styles.css">
    </head>
+  <body>
+    <div>
+      <header id="page-header">
+        <h1>SP</h1>
+        <h2>Stephanie D. Paulson</h2>
 
-   <body>
-    <header>
-      <h1>Stephanie Paulson</h1>
-    </header>
-    <main>
+      </header>
 
-      <section>
+    <section class="personal-layout">
+        <img src="./images/resume-profile.jpg" alt="stephanie" width="100%">
+        <article class="personal-content">
+          <header>
+            <h4>Contact</h4>
+          </header>
+          <p>2630 Knollwood Ln. Florissant MO 63031<br>
+          stephanie@dreamhighervisions.com<br>
+          314-246-0602</p>
+        </article>
+        <article>
+          <header>
+            <h4>Skills</h4>
+          </header>
+          <ul>
+            <li>1st Example</li>
+            <li>2nd Example</li>
+            <li>3rd Example</li>
+          </ul>
+        </article>
+        <article>
+          <header>
+            <h4>Education</h4>
+            <p><span><strong>
+                St. Louis Community College - St. Louis, MO
+              </strong></span><br>
+                Software Development & Database Management<br>02//2017 - Present</p>
+          </header>
+          <ul>
+            <li>Java Programming</li>
+            <li>SQL Database Management</li>
+            <li>Unix/Linux Fundamentals</li>
+            <li>HTML & Web Publishing</li>
+          </ul>
+        </article>
+        <article>
+          <header>
+            <p><span><strong>
+              St. Louis Community College - St. Louis, MO
+            </strong></span><br>
+              Software Development & Database Management<br>02//2017 - Present</p>
+          </header>
+          <ul>
+            <li>1st Example</li>
+            <li>2nd Example</li>
+            <li>3rd Example</li>
+          </ul>
+        </article>
+    </section>
+
+     <main class="main-layout">
+
+      <section class="summary">
         <header>
             <h2>About Me</h2>
         </header>
         <article>
-          <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ab dignissimos laudantium nisi, distinctio eveniet doloremque minima repellat eum cupiditate fugiat eos quidem accusamus quibusdam! Placeat ullam ipsa omnis illo saepe?</p>
+          <p>Creative, Patience, and Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ab dignissimos laudantium nisi, distinctio eveniet doloremque minima repellat eum cupiditate fugiat eos quidem accusamus quibusdam! Placeat ullam ipsa omnis illo saepe?</p>
         </article>
       </section>
 
       <section>
         <header>
-            <h3>Work Experience</h3>
+            <h2>Work Experience</h2>
         </header>
 
         <article>
           <header>
             <p><span><strong>
-              Job Title - Location
+              Billing Analyst - Maryland Heights, MO
             </strong></span><br>
-              Date of Attendance</p>
+              05/2016 - Present</p>
           </header>
           <ul>
-            <li>1st Example</li>
-            <li>2nd Example</li>
-            <li>3rd Example</li>
+            <li>Performs account analysis and data clean-up by creating and maintaining periodic fallout reports</li>
+            <li>Assisted in the development of SQL queries as well as automation macros that increased productivity</li>
+            <li>Enhanced valid and reliable reporting for business intelligence</li>
+            <li>Help others within our organization resolve complex and problematic ticket/order issues</li>
+            <li>Initiates project goals, plan of action and implemented processes for enhancements to the organization’s</li>
+              </li>
           </ul>
         </article>
         <article>
           <header>
             <p><span><strong>
-              Job Title - Location
+              Senior Advisor – Internet/Telephone Repair - Bridgeton, MO
             </strong></span><br>
-              Date of Attendance</p>
+              10/2014 – 05/2016</p>
           </header>
           <ul>
-            <li>1st Example</li>
-            <li>2nd Example</li>
-            <li>3rd Example</li>
+            <li>Created, maintained and provided development training on industry related standards and processes</li>
+            <li>Managed customer service representatives with effective leadership resolving complex or escalated issues</li>
+            <li>Scheduled, organized, and hosted routine team meetings and development sessions</li>
           </ul>
         </article>
         <article>
           <header>
             <p><span><strong>
-              Job Title - Location
+              Quality Development Associate - Bridgeton, MO
             </strong></span><br>
-              Date of Attendance</p>
+              04/2013 – 10/2014</p>
           </header>
           <ul>
-            <li>1st Example</li>
-            <li>2nd Example</li>
-            <li>3rd Example</li>
+            <li>Evaluated and rated the customer experience and product resource knowledge of Tech Support Associates</li>
+            <li>Provided feedback to Management while assisting in the Associates’ coaching/development sessions</li>
+            <li>Assisted with correspondence, scanning, and other projects using MS Office applications</li>
           </ul>
         </article>
         <article>
           <header>
             <p><span><strong>
-              Job Title - Location
+              Help Desk Analyst - Bridgeton, MO
             </strong></span><br>
-              Date of Attendance</p>
+              10/2011 – 04/2013</p>
           </header>
           <ul>
-            <li>1st Example</li>
-            <li>2nd Example</li>
-            <li>3rd Example</li>
+            <li>Analyzed fallout from automated order management system for resolution and/or completion</li>
+            <li>Produced actionable, timely insights from data to support organizational goals</li>
           </ul>
         </article>
         <article>
           <header>
             <p><span><strong>
-                Job Title - Location
+              Customer Care Advocate - Bridgeton, MO
             </strong></span><br>
-              Date of Attendance</p>
+              02/2006 -10/2011</p>
           </header>
           <ul>
-            <li>1st Example</li>
-            <li>2nd Example</li>
-            <li>3rd Example</li>
-          </ul>
-        </article>
-        <article>
-          <header>
-            <p><span><strong>
-                Job Title - Location
-            </strong></span><br>
-              Date of Attendance</p>
-          </header>
-          <ul>
-            <li>1st Example</li>
-            <li>2nd Example</li>
-            <li>3rd Example</li>
+            <li>Resolved high level billing escalations, complaints and damage claims</li>
+            <li>Maintained effective collaboration between various teams and departments to reach project goals</li>
+            <li>Provided inbound customer support and troubleshooting resources to frontline customers</li>
+            <li>Upsold customer’s on products that fit their needs</li>
           </ul>
         </article>
       </section>
 
-      <section>
-        <header>
-          <h3>Education</h3>
-        </header>
-        <article>
-          <header>
-            <p><span><strong>
-              Name - Location
-            </strong></span><br>
-              Major - Date of Attendance</p>
-          </header>
-          <ul>
-            <li>1st Example</li>
-            <li>2nd Example</li>
-            <li>3rd Example</li>
-          </ul>
-        </article>
-        <article>
-          <header>
-            <p><span><strong>
-              Name - Location
-            </strong></span><br>
-              Major - Date of Attendance</p>
-          </header>
-          <ul>
-            <li>1st Example</li>
-            <li>2nd Example</li>
-            <li>3rd Example</li>
-          </ul>
-        </article>
-      </section>
 
-      <section>
-        <header>
-          <h4>Contact</h4>
-        </header>
-        <p>2630 Knollwood Ln. Florissant MO 63031<br>
-        stephanie@dreamhighervisions.com<br>
-        314-246-0602</p>
-      </section>
 
-      <section>
-        <header>
-          <h4>Skills</h4>
-        </header>
-          <ul>
-            <li>1st Example</li>
-            <li>2nd Example</li>
-            <li>3rd Example</li>
-          </ul>
-      </section>
+
+
+
 
     </main>
+  </div>
     <footer><p>&copy Dream Higher Visions LLC</p></footer>
   </body>
 </html>
